generalize search route and delete active route
